[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "RevPyKit"
version = "0.1.0"
authors = [
  { name="FiftyFiveAA", email="fiftyfiveaa@gmail.com" },
]
description = "RevPyKit is a reverse engineering toolkit written in Python. It is an extendable platform which currently supports hashing, file signature detection, string searches, hex editing, and Windows PE analysis."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/FiftyFiveAA/RevPyKit/"
Issues = "https://github.com/FiftyFiveAA/RevPyKit/issues"
